Now using HttpClient5 for skin requests Fixed an error that would occur when requesting a skin without the proper dependencies Skin requests are now limited to ~200 / min Skin requests will start for players with bounties when the server starts Added SabreFactions to team checking. There isn't much right now you can do with this, but in the future, you will be able to set bounties on teams. Added any-kill to the reward heads section to drop a head when any kill occurs